--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -10,11 +10,35 @@ block title
 block content 
   include parts/main-carousel.pug
 
-  h1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.
+  section.intro
+    .camera-intro__text
+      h1 Máy ảnh DSLR/Mirrorless
 
-  h1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.
+      h2 
+        | Phá bỏ giới hạn hình ảnh từ chiếc máy ảnh du lịch giá rẻ
+        br
+        | và cả smartphone đắt tiền của bạn
 
-  h1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.
-  
+      button.btn.btn--dark.seemore-btn(type='button') Xem chi tiết
+
+    .camera-intro__img
+      img(src="img/body-img/camera-intro-img.png", alt="")
+
+  section.intro
+    .lens-intro__text
+      h1 Máy ảnh DSLR/Mirrorless
+
+      h2 
+        | Phá bỏ giới hạn hình ảnh từ chiếc máy ảnh du lịch giá rẻ
+        br
+        | và cả smartphone đắt tiền của bạn
+
+      button.btn.btn--dark.seemore-btn(type='button') Xem chi tiết
+
+    .lens-intro__img
+      img(src="img/lens-img/lens-intro-img.png", alt="")
+
+
+
 
 
