--- a/halo/template/parts/main-carousel.html
+++ b/halo/template/parts/main-carousel.html
@@ -10,8 +10,8 @@
   <div class="carousel-inner">
     <div class="carousel-item banner-1 active">
       <div class="carousel-caption">
-        <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
         <div class="carousel-caption__text">
+          <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
           <div class="logo-wrapper-1">
             <p class="canon-logo">Canon</p>
             <p class="eos-r">EOS R</p>
@@ -23,7 +23,7 @@
           <p class="carousel-header font-italic">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
-        <div class="carousel-caption__img"></div>
+        <div class="test-img"></div>
         <div class="carousel-caption__extra">
           <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""/>
             <p class="extra-text">LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS </p>
@@ -39,8 +39,8 @@
     </div>
     <div class="carousel-item banner-2">
       <div class="carousel-caption">
-        <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
         <div class="carousel-caption__text">
+          <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
           <div class="logo-wrapper-2">
             <div class="logo-only">
               <p class="sony-logo">SONY</p><img class="a9-logo" src="img/carousel-img/alpha-logos.png" alt=""/>
@@ -52,8 +52,7 @@
           <p class="carousel-header font-italic">SỰ HOÀN HẢO</p>
           <p class="carousel-header font-italic">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
-        </div>
-        <div class="carousel-caption__img"></div>
+        </div><img class="carousel-caption__img" src="img/carousel-img/a9-main-banner-xs-v3.png" alt=""/>
         <div class="carousel-caption__extra">
           <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""/></div>
           <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-2.png" alt=""/></div>
@@ -63,16 +62,15 @@
     </div>
     <div class="carousel-item banner-3">
       <div class="carousel-caption">
-        <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
         <div class="carousel-caption__text">
+          <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
           <div class="logo-wrapper-3">
             <p class="sony-logo">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt=""/>
           </div>
           <p class="carousel-header font-italic">MỘT NGÀM CHO TẤT CẢ</p>
           <p class="carousel-header font-italic">Kết nối mọi thứ với ngàm E-mount của <span class="sony-logo-inline">SONY</span></p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
-        </div>
-        <div class="carousel-caption__img"></div>
+        </div><img class="carousel-caption__img" src="img/carousel-img/e-mount-banner-min.png" alt=""/>
         <div class="carousel-caption__extra">
           <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""/></div>
           <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-2.png" alt=""/></div>
