--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -1,9 +1,14 @@
-/* ---------- reset css ----------*/
+
+/* --------------- reset css --------------- */
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+*:focus {
+  outline: none;
 }
 
 p {
@@ -55,17 +60,27 @@ img {
   max-height: 100%;
 }
 
-/* ---------- kết thúc reset css ----------*/
+/* --------------- kết thúc reset css --------------- */
 
-/* ---------- font ----------*/
 
+/* --------------- settings chung --------------- */
+.container {  
+/* set các .container sẽ là fluid, sẽ giới hạn sau ở @media */
+  max-width: 100%;  
+  padding: 0px 15px !important;
+}
+/* --------------- kết thúc settings chung --------------- */
+
+
+/* --------------- font styles --------------- */
+
+/* ------- font faces -------*/
 @font-face {
     font-family: 'canon';
     src: url('/fonts/canon-webfont.woff2') format('woff2'),
          url('/fonts/canon-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -89,7 +104,7 @@ img {
   font-family: 'Roboto', sans-serif;
 }
 
-/* ----- sizes -----*/
+/* ------- font sizes ------- */
 
 .font-11 { 
   font-size: 11px !important; 
@@ -97,21 +112,21 @@ img {
 
 .font-14, 
 .carousel-header,
-.nav-item:nth-child(5) { 
+.nav-item:nth-child(5),
+.log { 
   font-size: 14px !important; 
 }
 
-.font-15 { 
+.font-15{ 
   font-size: 15px !important; 
 }
 
 .font-16,
 .eos-r,
-.nav-item:nth-child(-n+4) { 
+.nav-item:nth-child(-n+4), h2 { 
   font-size: 16px !important; 
 }
 
-h2,
 .font-17 { 
   font-size: 17px !important; 
 }
@@ -138,67 +153,87 @@ h1 {
   font-size: 36px !important; 
 }
 
-/* ----- colors -----*/
-.white-text { 
-  color: white !important; 
+/* ------- font colors ------- */
+#collapsibleNavbar li a,
+.log {
+  color: #FFFFFF;
 }
 
 .canon-logo {
   color: #CC0000;
 }
 
-/* ----- glow effect -----*/
-.glow-big,
-.see-more-btn
- {
-  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
-}
-
-/* -----  weight -----*/
+/* -------  font weight ------- */
 
 
-/* -----  line height -----*/
+/* -------  line height ------- */
 .canon-logo,
 .sony-logo {
   line-height: 3rem;
 }
 
 
-/* ----- white font -----*/
-#collapsibleNavbar li a {
-  color: #FFFFFF;
-}
+/* ------- white font ------- */
 
-/* ----- bold font -----*/
+
+/* ------- bold font ------- */
 #collapsibleNavbar li:nth-child(-n+4) a {
   font-weight: bold;
 }
 
-/* ----- italic font -----*/
+/* ------- italic font ------- */
 #collapsibleNavbar li:nth-child(5) a {
   font-style: italic;
 }
+/* --------------- kết thúc font styles --------------- */
 
-/* ---------- kết thúc font styles ----------*/
+
+/* --------------- effect styles --------------- */
+.glow-big,
+.seemore-btn {
+  box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
+}
+/* --------------- kết thúc effect --------------- */
 
 
-/* ---------- settings chung ----------*/
-.container {
-  max-width: 1140px;
+/* --------------- buttons styles --------------- */
+.btn {
+  border-radius: 8px !important;
+  transition: all 300ms;
 }
 
+.btn--light {
+  color: #ffffff !important;
+  border-color: #ffffff !important;
+}
 
-/* ---------- kết thúc settings chung ----------*/
+.btn--light:active, .btn--light:hover {
+  background-color: #FFFFFF !important;
+  color: #000000 !important;
+}
+
+.btn--dark {
+  color: #000000 !important;
+  border-color: #000000 !important;
+}
+
+.btn--dark:active, .btn--dark:hover {
+  background-color: #000000 !important;
+  color: #ffffff !important;
+}
+/* --------------- kết thúc buttons  --------------- */
 
 
-/* ---------- nav styles ----------*/
+/* --------------- navbar styles --------------- */
 .navbar {
   background-color: #222222;
-  z-index: 1000;
+  z-index: 100;
+  border: 1px solid #222222;
 }
 
 .navbar .container {
   position: relative;
+  z-index: 101;
 }
 
 .navbar-brand img {
@@ -207,7 +242,7 @@ h1 {
 }
 
 .navbar-brand {
-  padding: 10px 0px;
+  padding: 9px 0px;
   margin-left: 0px;
 }
 
@@ -217,102 +252,196 @@ h1 {
 
 .navbar-toggler {
   border-color: rgba(255,255,255, 0.3) !important;
-  margin-right: 37.5px;
 }
 
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
 }
 
-.cart-search {
+.log-cart-search {
   display: flex;
+  align-items: center;
 }
 
-.cart-search a {
+.log-cart-search a {
   display: block;
 }
 
-.cart-search a:last-of-type {
-  margin-left: 20px;
+.fa-search, 
+.fa-shopping-cart {
+  font-size: 16px;
+  color: #FFFFFF;
 }
 
-.fa-search, .fa-shopping-cart {
-  font-size: 20px;
+.fa-times {
+  font-size: 18px;
   color: #FFFFFF;
 }
 
 .hidden-till-md {
-  display: none;
+  display: none !important;
 }
 
 .navbar-collapse {
   position: absolute;
-  top: 45px;
+  top: 43px;
   left: 0;
   background-color: #222222;
   width: 100%;
-  padding-left: 15px;
+  padding: 0px 15px;
+  flex-grow: unset;
 }
 
-/* ---------- kết thúc nav styles ----------*/
+.search-bar {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  padding: 10px 30px;
+  z-index: 1000;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.4s, visibility 0.4s;
+  background-color: #222222;
+}
+
+.search-bar-till-md {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  height: 34px;
+  padding: 5px 0px;
+}
+
+.search-area {
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  font-size: 13px;
+  padding: 0px 10px;
+}
+
+.search-area:focus {
+  outline: none;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  font-size: 13px;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  font-size: 13px;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  font-size: 13px;
+}
+
+.search-btn {
+  padding: 2px 0px 0px 0px;
+  margin-left: 10px;
+  border: none;
+}
+
+.search-cancel {
+  padding-right: 0px !important;
+  margin-left: 15px;
+}
 
 
-/* ---------- media querries ----------*/
+/* --------------- kết thúc nav styles --------------- */
+
+
+/* --------------- media queries --------------- */
 
 @media only screen and (min-width: 576px) {
 
-  .container {
-    max-width: 100%;
-    padding: 0px calc((10%-23)/2) !important;
+  .container,
+  .navbar-collapse {
+    padding: 0px 30px !important;
   }
 
-  .navbar-collapse {
-    padding-left: calc((10%-23)/2) !important;
-  }
 }
 
-
 @media only screen and (min-width: 768px) {
-  .cart-search {  /* ẩn cart search sm */
-    display: none;
+
+  .container {
+    padding: 0px 30px !important;
   }
 
   .hidden-till-md {   /* hiện cart search md */
-    display: block;
+    display: block !important;
   }
 
-  .navbar-collapse {   /* collapse đang full màn, giảm về bình thường */
-    width: auto;
+  .display-till-md {   
+    display: none;
   }
 
-  .navbar-collapse {
+
+
+  .search-bar-till-md {
+    display: none;
+  }
+
+  .search-bar .search-area {
+    height: 100%;
+  }
+
+  .navbar-brand img {
+    height: 30px;
+  }
+
+  .navbar-collapse { /* collapse từ full màn giảm về auto */
   position: static;
   width: auto;
-  padding-left: 0px;
-  justify-content: flex-end;
+  padding: 0px !important;
+  justify-content: flex-start;
+  margin-left: 20px;
   }
+
+  .log {   /* giãn cách menu thông qua log-reg */
+    margin: 0px 20px 0px 38px !important;
+  }
+
+  .fa-search, 
+  .fa-shopping-cart {
+    font-size: 22px;
+  }
+
+  .fa-times {
+    font-size: 26px;
+    color: #FFFFFF;
+  }
+
+  .search-btn {
+    margin-left: 20px;
+  }
+
 }
 
 @media only screen and (min-width: 992px) {
-  .log-reg {   /* giãn cách menu thông qua log-reg */
-    margin: 0px 40px 0px 135px !important;
-  }
 
   .nav-item:nth-child(-n+4) {   /* giãn cách các menu item */
     margin: 0px 10px !important; 
   }
 
-  .nav-item:nth-child(6) {   /* giãn cách search với cart */
+  .search-icon {   /* giãn cách search với cart */
     padding-right: 5px !important;
     padding-left: 5px !important;
-    margin-right: 10px !important;
   }
+
 }
 
 
 @media only screen and (min-width: 1200px) {
-  nav .container {   /* xóa padding 2 bên nav để căn chuẩn */
-    padding: 0px;
+  .container {   /* xóa padding 2 bên nav để căn chuẩn */
+    padding: 0px !important;
+    max-width: 1140px;
   }
 
   .nav-link {   /* xóa padding 2 bên các item để căn chuẩn */
