--- a/halo/template/parts/layout.pug
+++ b/halo/template/parts/layout.pug
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    link(rel='shortcut icon' href='/halo/favicon.ico')
     
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    link(rel='preconnect' href='https://fonts.gstatic.com')
+
+    link(href='https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap' rel='stylesheet')
 
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous')
 
