--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -16,15 +16,15 @@ header
 
         ul.navbar-nav
           li.nav-item
-            a.nav-link.px-md-3(href='camera-hub.html') Máy ảnh
+            a.nav-link.py-3.px-md-3(href='camera-hub.html') Máy ảnh
           li.nav-item
-            a.nav-link.px-md-3(href='camera-hub.html') Ống kính
+            a.nav-link.py-3.px-md-3(href='camera-hub.html') Ống kính
           li.nav-item
-            a.nav-link.px-md-3(href='camera-hub.html') Phụ kiện
+            a.nav-link.py-3.px-md-3(href='camera-hub.html') Phụ kiện
           li.nav-item
-            a.nav-link.px-md-3(href='review-hub.html') Đánh giá
+            a.nav-link.py-3.px-md-3(href='review-hub.html') Đánh giá
           li.nav-item.display-till-md
-            a.nav-link(href='review-hub.html') Đăng nhập/Đăng ký
+            a.nav-link.py-3(href='review-hub.html') Đăng nhập/Đăng ký
 
       .log-cart-search
         a.hidden-till-md.log(href='review-hub.html') Đăng nhập/Đăng ký
