--- a/halo/css/index.css
+++ b/halo/css/index.css
@@ -1,15 +1,23 @@
 
-body {
-  
-}
-
 /* ---------- carousel styles ----------*/
+
+/*
+Carousel map: 
+
+
+*/
+#main-carousel .container {
+  padding-top: 25px !important; /* -- lề trên -- */
+  height: 100%;
+}
 
 #main-carousel, 
 .carousel-inner, 
 .carousel-item {  /* -- kéo dài --*/ 
   min-height: 450px; 
 }
+
+
 
 .banner-1 {
   background-image: url('../img/carousel-img/banner-bg-1-min.jpg');
@@ -18,10 +26,10 @@ body {
 
 .banner-2 {
   background-color: rgb(105,105,105);
-  background-image: url('../img/carousel-img/alpha-logo-big-v2.png'), linear-gradient(180deg, rgba(105,105,105,1) 0%, rgba(48,48,48,1) 66%, rgba(0,0,0,1) 100%);
+  background-image: url('../img/carousel-img/alpha-logo-big-v3.png'), linear-gradient(180deg, rgba(105,105,105,1) 0%, rgba(48,48,48,1) 66%, rgba(0,0,0,1) 100%);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center, center;
+  background-position: top 15% right 50%, center;
 }
 
 .banner-3 {
@@ -34,61 +42,56 @@ body {
 .carousel-caption {
   width: 100%;
   position: static;
-  padding: 20px 0px 0px 0px;   /* -- lề trên -- */
+  padding: 0px;   /* -- lề trên -- */
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
 }
 
-.logo-wrapper-1 {
+.logo-wrapper-1,
+.logo-wrapper-2,
+.logo-wrapper-3 {
   display: flex;
+  width: fit-content;
+}
+
+.logo-wrapper-1 {
   flex-flow: column nowrap;
   align-items: flex-end;
-  width: 110px;
   margin: 15px auto;
 }
 
 .logo-wrapper-2 {
-  display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  width: 160px;
+  margin: 15px auto 14px auto;
+}
+
+.logo-wrapper-3 {
   margin: 15px auto;
 }
 
-.logo-only, 
+.logo-sony-a9-wrapper, 
 .logo-wrapper-3 {
-  display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
 }
 
-.logo-only {
-  padding: 10px 0px 14px 0px;
+.logo-sony-a9-wrapper {
+  padding: 0px;
 }
 
-.eos-r, .carousel-header4, .big-title {
-  color: white !important;
-  text-align: center;
-}
-
-#main-carousel .seemore-btn {
-  margin: 15px auto 40px auto;
-}
-
-#main-carousel .btn {
-  width: 70px;
+.seemore-btn {
   display: block;
-}
-
-.carousel-caption__extra {
-  display: none;
+  margin: 15px auto 40px auto;
+  width: fit-content;
 }
 
 .progress {
   background-color: transparent;
+  width: 100%;
 }
 
 .progress-bar {
@@ -120,7 +123,7 @@ body {
 }
 
 .lotr-logo {
-  height: 59px;
+  height: 77px;
 }
 
 .collab {
@@ -128,13 +131,9 @@ body {
   font-size: 20px;
 }
 
-.sony-logo-inline {
+.logo-sony-inline {
   font-size: 13px !important;
   font-style: normal;
-}
-
-.logo-wrapper-3 {
-  margin: 15px auto;
 }
 
 .carousel-caption__img {
@@ -162,33 +161,107 @@ body {
 
 /*--------*/
 
+@media only screen and (min-width: 576px) {
+
+  .logo-wrapper-1, .logo-wrapper-2, .logo-wrapper-3{
+    margin-top: 30px;
+  }
+
+  .a9-logo {
+    height: 35px;
+    margin-bottom: 8px;
+  }
+
+  .seemore-btn {
+    display: block;
+    margin: 25px auto 50px auto;
+    width: fit-content;
+  }
+
+  .carousel-control-next,
+  .carousel-control-prev,
+  .carousel-control-next img,
+  .carousel-control-prev img {
+    width: 28px;
+  }
+
+  .carousel-control-prev {
+    left: 30px;
+  }
+  
+  .carousel-control-next {
+    right: 30px;
+  }
+
+  .banner-2 {
+    background-position: cover;
+  }
+
+}
+
 @media only screen and (min-width: 768px) {
 
-  /*---------- carousel full version ----------*/
+  /*--------------- carousel MAX version ---------------*/
+
+  /* ---------- update height ---------- */
   #main-carousel, 
   .carousel-inner, 
-  .carousel-item {  /* -- kéo dài --*/ 
-  min-height: 650px; 
+  .carousel-item {  
+  height: 580px;     /*fix width 580px (màn 625px) */
+  }
+
+  /* ---------- update lề trên/trái/phải ---------- */
+  #main-carousel .container {
+    padding: 25px 70px 0px 70px !important; /* -- lề trên -- */
+    height: 100%;
   }
 
   .carousel-caption {
     flex-flow: row wrap;
-  }
+    justify-content: space-between;
+  } 
 
-  .carousel-caption h1 {
+  .carousel-title {
     width: 100%;
+    margin-bottom: 40px;
   }
 
-  .carousel-caption__img {
-    width: 410px;
-    height: calc(410px / 1.6725);
+  .carousel-caption__extra {
+    display: flex !important;
+    justify-content: space-between;
   }
-  
+
+  .banner-1 .carousel-caption__extra {
+    width: 100%;
+    max-width: 700px;
+    margin-bottom: 20px;
+    height: 100px;
+  }
+
+  .extra {
+    height: 100%;
+  }
+
+  .extra-text {
+    max-width: 156px;
+    margin-top: 10px;
+  }
+
+  .extra img {
+    max-width: 70px;
+  }
+
+  .carousel-indicators {
+    margin-bottom: 25px;
+  }
+
+  /* ----- thay banner MAX ----- */
   .banner-1 .carousel-caption__img {
     background-image: url("../img/carousel-img/eos-r-banner-max.png");
   }
   
   .banner-2 .carousel-caption__img {
+    display: none;
     background-image: url("../img/carousel-img/a9-banner-max.png");
   }
   
@@ -196,4 +269,77 @@ body {
     background-image: url("../img/carousel-img/e-mount-banner-min.png");
   }
 
+  .carousel-caption__img {    /*size mới cho các banner max*/
+    width: 370px;
+    height: calc(370px / 1.3877);
+  }
+
+  /* --------------- update banner 2 --------------- */
+
+  .banner-2 .carousel-caption {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .banner-2 .carousel-caption h1 {
+    margin: 0px;
+  }
+
+  .banner-2 .carousel-caption__img { /*căn giữa ảnh A9*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .banner-2 .carousel-caption__text {
+    width: 100%;
+  }
+
+  .banner-2 {
+    background-position: top 5% right 50%, center;
+  }
+
+  .logo-wrapper-2 {
+    margin: 0px auto;
+  }
+
+  .logo-sony-a9-wrapper {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .logo-sony-a9-wrapper .logo-sony {
+    font-size: 80px;
+    line-height: 60px;
+  }
+
+  .a9-logo {
+    height: 120px;
+    margin: 0px;
+  }
 }
+
+@media only screen and (min-width: 992px) {
+  
+  .carousel-caption {
+    justify-content: center;
+    align-items: stretch;
+  } 
+
+  .carousel-caption__img {
+    margin: 10px 0px 0px 240px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .carousel-control-prev {
+    left: calc(50vw - 570px);
+  }
+  
+  .carousel-control-next {
+    right: calc(50vw - 570px);
+  }
+}
+
