--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -23,11 +23,11 @@ header
             a.nav-link.py-3.px-md-3(href='camera-hub.html') Phụ kiện
           li.nav-item
             a.nav-link.py-3.px-md-3(href='review-hub.html') Đánh giá
-          li.nav-item.display-till-md
+          li.nav-item.display-till-md.log-min
             a.nav-link.py-3(href='review-hub.html') Đăng nhập/Đăng ký
 
       .log-cart-search
-        a.hidden-till-md.log(href='review-hub.html') Đăng nhập/Đăng ký
+        a.hidden-till-md.log-max(href='review-hub.html') Đăng nhập/Đăng ký
         a.cart-icon(href="cart.html")
           <i class="fas fa-shopping-cart"></i>
         button.btn.search-btn.hidden-till-md(onclick="searchBarToggler()")
